Updates to alignment of columns and offsets. Inclusion of event location. Bug fix on 'eventDateObj_end > now' statement being commented out and replcaed with 'true' for testing.

--- a/src/services/icloud/icloud.css
+++ b/src/services/icloud/icloud.css
@@ -54,6 +54,11 @@
     font-weight: 700;
 }
 
+.icloud_events-location {
+    font-size: 12;
+    font-weight: 700;
+}
+
 .icloud_events-date {
     font-size: 14;
     padding: 0 2px 0 2px;
